tests/ui/editions/never-type-fallback-breaking.e2021.stderr
error: this function depends on never type fallback being `()`
  --> $DIR/never-type-fallback-breaking.rs:20:1
   |
LL | fn m() {
   | ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: Default` will fail
  --> $DIR/never-type-fallback-breaking.rs:24:17
   |
LL |         true => Default::default(),
   |                 ^^^^^^^^^^^^^^^^^^
   = note: `#[deny(dependency_on_unit_never_type_fallback)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
help: use `()` annotations to avoid fallback changes
   |
LL |     let x: () = match true {
   |          ++++

error: this function depends on never type fallback being `()`
  --> $DIR/never-type-fallback-breaking.rs:32:1
   |
LL | fn q() -> Option<()> {
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: Default` will fail
  --> $DIR/never-type-fallback-breaking.rs:39:5
   |
LL |     deserialize()?;
   |     ^^^^^^^^^^^^^
help: use `()` annotations to avoid fallback changes
   |
LL |     deserialize::<()>()?;
   |                ++++++

error: this function depends on never type fallback being `()`
  --> $DIR/never-type-fallback-breaking.rs:49:1
   |
LL | fn meow() -> Result<(), ()> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `(): From<!>` will fail
  --> $DIR/never-type-fallback-breaking.rs:52:5
   |
LL |     help(1)?;
   |     ^^^^^^^
help: use `()` annotations to avoid fallback changes
   |
LL |     help::<(), _>(1)?;
   |         +++++++++

error: this function depends on never type fallback being `()`
  --> $DIR/never-type-fallback-breaking.rs:61:1
   |
LL | pub fn fallback_return() -> Result<(), ()> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: Default` will fail
  --> $DIR/never-type-fallback-breaking.rs:64:19
   |
LL |     takes_apit(|| Default::default())?;
   |                   ^^^^^^^^^^^^^^^^^^
help: use `()` annotations to avoid fallback changes
   |
LL |     takes_apit::<()>(|| Default::default())?;
   |               ++++++

error: this function depends on never type fallback being `()`
  --> $DIR/never-type-fallback-breaking.rs:75:1
   |
LL | fn fully_apit() -> Result<(), ()> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: Default` will fail
  --> $DIR/never-type-fallback-breaking.rs:78:17
   |
LL |     takes_apit2(mk()?);
   |                 ^^^^^
help: use `()` annotations to avoid fallback changes
   |
LL |     takes_apit2(mk::<()>()?);
   |                   ++++++

error: aborting due to 5 previous errors

Future incompatibility report: Future breakage diagnostic:
error: this function depends on never type fallback being `()`
  --> $DIR/never-type-fallback-breaking.rs:20:1
   |
LL | fn m() {
   | ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: Default` will fail
  --> $DIR/never-type-fallback-breaking.rs:24:17
   |
LL |         true => Default::default(),
   |                 ^^^^^^^^^^^^^^^^^^
   = note: `#[deny(dependency_on_unit_never_type_fallback)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
help: use `()` annotations to avoid fallback changes
   |
LL |     let x: () = match true {
   |          ++++

Future breakage diagnostic:
error: this function depends on never type fallback being `()`
  --> $DIR/never-type-fallback-breaking.rs:32:1
   |
LL | fn q() -> Option<()> {
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: Default` will fail
  --> $DIR/never-type-fallback-breaking.rs:39:5
   |
LL |     deserialize()?;
   |     ^^^^^^^^^^^^^
   = note: `#[deny(dependency_on_unit_never_type_fallback)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
help: use `()` annotations to avoid fallback changes
   |
LL |     deserialize::<()>()?;
   |                ++++++

Future breakage diagnostic:
error: this function depends on never type fallback being `()`
  --> $DIR/never-type-fallback-breaking.rs:49:1
   |
LL | fn meow() -> Result<(), ()> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `(): From<!>` will fail
  --> $DIR/never-type-fallback-breaking.rs:52:5
   |
LL |     help(1)?;
   |     ^^^^^^^
   = note: `#[deny(dependency_on_unit_never_type_fallback)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
help: use `()` annotations to avoid fallback changes
   |
LL |     help::<(), _>(1)?;
   |         +++++++++

Future breakage diagnostic:
error: this function depends on never type fallback being `()`
  --> $DIR/never-type-fallback-breaking.rs:61:1
   |
LL | pub fn fallback_return() -> Result<(), ()> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: Default` will fail
  --> $DIR/never-type-fallback-breaking.rs:64:19
   |
LL |     takes_apit(|| Default::default())?;
   |                   ^^^^^^^^^^^^^^^^^^
   = note: `#[deny(dependency_on_unit_never_type_fallback)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
help: use `()` annotations to avoid fallback changes
   |
LL |     takes_apit::<()>(|| Default::default())?;
   |               ++++++

Future breakage diagnostic:
error: this function depends on never type fallback being `()`
  --> $DIR/never-type-fallback-breaking.rs:75:1
   |
LL | fn fully_apit() -> Result<(), ()> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: Default` will fail
  --> $DIR/never-type-fallback-breaking.rs:78:17
   |
LL |     takes_apit2(mk()?);
   |                 ^^^^^
   = note: `#[deny(dependency_on_unit_never_type_fallback)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
help: use `()` annotations to avoid fallback changes
   |
LL |     takes_apit2(mk::<()>()?);
   |                   ++++++

